--- a/app/src/main/res/layout/view_currency_list.xml
+++ b/app/src/main/res/layout/view_currency_list.xml
@@ -5,8 +5,6 @@
 
     <data>
 
-        <import type="android.view.View" />
-
         <variable
             name="currencies"
             type="com.vladus177.currencycheck.presentation.model.Rates" />
@@ -31,7 +29,7 @@
             android:orientation="vertical"
             android:paddingStart="@dimen/space_normal"
             android:paddingEnd="@dimen/space_normal"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -60,7 +58,7 @@
                     android:paddingEnd="@dimen/space_normal"
                     android:text="@{currencies.currencyCode}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/colorAccent"
                     tools:text="USD" />
 
                 <TextView
@@ -74,7 +72,7 @@
                     android:paddingEnd="@dimen/space_normal"
                     android:text="@{currencies.currencyName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/colorAccent"
                     tools:text="US dollar" />
 
                 <EditText
@@ -86,7 +84,7 @@
                     android:inputType="number"
                     android:maxLength="6"
                     android:padding="@dimen/space_extra_xxsmall"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/colorAccent"
                     android:textSize="32sp"
                     tools:ignore="RelativeOverlap"
                     tools:text="100" />
